Fix VirtualParallelExecutionIntegrationTests