@@ -61,7 +61,7 @@ tasks {
 		useJUnitPlatform {
 			excludeTags("exclude")
 		}
-		jvmArgs("-Xmx1g")
+		jvmArgs("-Xmx1g", "--enable-preview")
 		distribution {
 			// Retry in a new JVM on Windows to improve chances of successful retries when
 			// cached resources are used (e.g. in ClasspathScannerTests)
